--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <div id="popUpContainer">
-      <div id="nameBothPlayer" class="popUp">Please enter names for each player.<br><br><button id="nameBothPlayerOkButton">OK</button></div>
+    <div id="nameBothPlayerPopUp" class="displayNone popUpContainer">
+      <div class="popUp" class="displayNone">
+        Please enter a name for each player.
+      </div>
+      <button id="nameBothPlayerOkButton">OK</button>
     </div>
+
+    <div id="resultPopUp" class="displayNone popUpContainer">
+      <div class="popUp" class="displayNone">
+        <p id="resultMessage"></p>
+      </div>
+      <button id="newGameButton">Start a New Game</button>
+    </div>
+
     <div id="top">
-      <h1>Tic Tac Toe</h1>
       <div id="topContainer1" class="displayFlex">
         <div id="players">
+          <h1>Tic Tac Toe</h1>
           <h3>Player X</h3>
           <input
             type="text"
@@ -28,23 +39,24 @@
             class="playerTextInput"
             placeholder="Enter Name Here"
           />
-        </div>
-        <div>
           <button id="startGameButton">Start Game</button>
         </div>
       </div>
     </div>
     <div id="gameBoardContainer" class="displayNone">
-      <div id="gameBoard">
-        <div class="gameBoardSquare" id="square1"></div>
-        <div class="gameBoardSquare" id="square2"></div>
-        <div class="gameBoardSquare" id="square3"></div>
-        <div class="gameBoardSquare" id="square4"></div>
-        <div class="gameBoardSquare" id="square5"></div>
-        <div class="gameBoardSquare" id="square6"></div>
-        <div class="gameBoardSquare" id="square7"></div>
-        <div class="gameBoardSquare" id="square8"></div>
-        <div class="gameBoardSquare" id="square9"></div>
+      <div id="gameBoardBorder">
+        <h1 id="boardTitle">Tic Tac Toe</h1>
+        <div id="gameBoard">
+          <div class="gameBoardSquare" id="square1"></div>
+          <div class="gameBoardSquare" id="square2"></div>
+          <div class="gameBoardSquare" id="square3"></div>
+          <div class="gameBoardSquare" id="square4"></div>
+          <div class="gameBoardSquare" id="square5"></div>
+          <div class="gameBoardSquare" id="square6"></div>
+          <div class="gameBoardSquare" id="square7"></div>
+          <div class="gameBoardSquare" id="square8"></div>
+          <div class="gameBoardSquare" id="square9"></div>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
